# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: build-check.yml
gendiff/: __init__.py  generate.py
gendiff/scripts/: gendiff.py
tests/: expected.py  test_json.py
